--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
 
 * {
     box-sizing: border-box;
+    margin:0px;
 }
 
 .bg-container {
     min-height: 99vh;
     display: flex;
-    padding: 100px;
+    padding: 20px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
